--- a/gdsl-code-of-conduct.qmd
+++ b/gdsl-code-of-conduct.qmd
@@ -17,11 +17,11 @@ Any changes to this document must be considered following the steps described fo
 
 -   University of Liverpool is hereby referenced as the University.
 -   The Department of Geography & Planning is hereby referenced as the Department.
--   The Geographic Data Science Lab (GDSL) is hereby references as GDSL.
+-   The Geographic Data Science Lab (GDSL) is hereby referenced as GDSL.
 
 # Section 2 Our Pledge
 
-We as members and contributors of GDSL pledge to make participation in our community a harassment-free experience for everyone, regardless of age, body size, visible or invisible disability, ethnicity, gender identity and expression, level of experience, education, socioeconomic status, nationality, personal appearance, race, caste, color, religion, or sexual identity and orientation.
+We as members and contributors of GDSL pledge to make participation in our community a harassment-free experience for everyone, regardless of age, body size, visible or invisible disabilities, ethnicity, gender identity and expression, level of experience, education, socioeconomic position (current or historic), nationality, personal appearance, race, caste, colour, religion, or sexual identity and orientation.
 
 We pledge to act and interact in ways that contribute to an open, welcoming, diverse, inclusive, and healthy community.
 
@@ -35,7 +35,7 @@ We pledge to act and interact in ways that contribute to an open, welcoming, div
 
 ## Meeting Participants
 
--   Meetings shall be open to staff and post-doctoral members of the GDSL.
+-   Meetings shall be open to all staff (including both tenured academics and research associates/fellows ) of the GDSL.
 -   Meetings shall be open to non-GDSL staff who may attend as observers with the permission of any GDSL member.
 -   Freedom of discussion shall be the rule.
 
@@ -45,19 +45,21 @@ We pledge to act and interact in ways that contribute to an open, welcoming, div
 
 -   Any member of GDSL may submit items of business for inclusion on the agenda to the Lead of Deputy Lead. All items submitted at least 2 business days prior to the meeting shall be placed on the agenda.
 
--   Explanatory or background information on all agenda items shall be prepared by the sponsor of the item and shall be discussed during a Meeting.
+-   Explanatory or background information on all agenda items shall be prepared by the sponsor of the item and shall be discussed during a meeting.
 
 ## Frequency of Meetings
 
--   GDSL meetings will typically happen bi-monthly. GDSL meeting will be convened a minimum of once every term.
+-   GDSL meetings will typically happen bi-monthly. GDSL meetings will be convened a minimum of once every term.
 
 -   When the agenda of a scheduled meeting is not completed on the scheduled date, the agenda should be completed at the next meeting.
 
 -   Extraordinary meetings will be scheduled if time-sensitive issues emerge and they cannot be discussed in a scheduled meeting. 
 
-  - Any GDSL member can summon an extraordinary meeting.
+  - Any GDSL member can summon an extraordinary meeting by contacting the Lead or Deputy Lead.
   
-- All meetings will be recorded if any GDSL member cannot attend. 
+- All meetings will be recorded and stored online (e.g., via MS Teams) for any GDSL member who cannot attend. 
+
+- Meetings will be hybrid in format, unless otherwise stated.
 
 # Section 4 Decisions
 
@@ -99,13 +101,13 @@ Voting may be conducted (1) at a staff meeting, (2) by email or (3) Teams channe
 4.  A super majority is defined as 67% or greater of the votes cast as affirmative, negative, and abstain.
 5.  Balloting done at meetings shall be extended to any non-attending members via email or Teams channel. If a GDSL member has a business-related conflict for a meeting, the member may submit their ballot by email or Teams.
 6.  A clear deadline will be given for the closing of the poll. In other words, there should be a minimum waiting period of 3 days after the announcement or discussion of a topic before the closing of the poll. Votes after the deadline will not be considered.
-7.  A minimum of fifteen GDSL members need to vote in order for the result to be valid. If a vote is considered as no valid, the voting period will be extended for an additional three days. By the end of this second round, a decision will be made considering the votes casted up to that point.
+7.  A minimum of fifteen GDSL members need to vote in order for the result to be valid. If a vote is considered as not valid, the voting period will be extended for an additional three days. By the end of this second round, a decision will be made considering the votes casted up to that point.
 8.  Proxy ballots are not allowed.
 9.  Normally a simple majority as defined in the previous section shall be needed to approve a motion. Per voice vote at a meeting, a super majority can be required to approve a motion.
 
 ### What happens in the case of 50 / 50
 
--   If no consensus is reached upon a topic, voting options will be revised and reformulated incorporating new information from discussions held in a follow-up Meeting and a new vote will be issued.
+-   If no consensus is reached upon a topic, voting options will be revised and reformulated incorporating new information from discussions held in a follow-up meeting and a new vote will be issued.
 
 ## Non-critical decisions
 
