--- a/gdsl-code-of-conduct.qmd
+++ b/gdsl-code-of-conduct.qmd
@@ -13,6 +13,8 @@ This document aims to set the expected principles to be used for making decision
 
 Any changes to this document must be considered following the steps described for Critical decisions below.
 
+For all these decisions, the core GDSL principle is to promote discussion to arrive to a decision that represents the shared views from the members of the group. The core principle is to incorporate the best elements from the various suggested ideas in a consensual manner. Having constructive, transparent and open discussion will be the preferred first stage of the group as a forum to make decisions. All possible steps will be implemented so opposing alternatives meet on middle grounds, accommodating elements from their contrasting options. A vote on opposing alternatives will be viewed as a less preferred option.
+
 # Section 1 Definitions / Terms Used
 
 -   University of Liverpool is hereby referenced as the University.
@@ -43,23 +45,23 @@ We pledge to act and interact in ways that contribute to an open, welcoming, div
 
 -   The Lead or Deputy Lead shall prepare the agenda and distribute it with a minimum of one business days prior to the meeting to all members of GDSL.
 
--   Any member of GDSL may submit items of business for inclusion on the agenda to the Lead of Deputy Lead. All items submitted at least 2 business days prior to the meeting shall be placed on the agenda.
+-   Any member of GDSL may submit items of business for inclusion on the agenda to the Lead of Deputy Lead. All items submitted at least two business days prior to the meeting shall be placed on the agenda.
 
 -   Explanatory or background information on all agenda items shall be prepared by the sponsor of the item and shall be discussed during a meeting.
 
 ## Frequency of Meetings
 
--   GDSL meetings will typically happen bi-monthly. GDSL meetings will be convened a minimum of once every term.
+-   GDSL meetings will typically happen twice a month. GDSL meetings will be convened a minimum of once every term.
 
 -   When the agenda of a scheduled meeting is not completed on the scheduled date, the agenda should be completed at the next meeting.
 
--   Extraordinary meetings will be scheduled if time-sensitive issues emerge and they cannot be discussed in a scheduled meeting. 
+-   Extraordinary meetings will be scheduled if time-sensitive issues emerge and they cannot be discussed in a scheduled meeting.
 
-  - Any GDSL member can summon an extraordinary meeting by contacting the Lead or Deputy Lead.
-  
-- All meetings will be recorded and stored online (e.g., via MS Teams) for any GDSL member who cannot attend. 
+-   Any GDSL member can summon an extraordinary meeting by contacting the Lead or Deputy Lead.
 
-- Meetings will be hybrid in format, unless otherwise stated.
+-   All meetings will be recorded and stored online (e.g., via MS Teams) for any GDSL member who cannot attend, when possible.
+
+-   Meetings will be hybrid in format, unless otherwise stated.
 
 # Section 4 Decisions
 
@@ -69,11 +71,11 @@ We will differentiate between different types of decisions:
 
 -   Critical decisions: These are decisions that will significantly impact GDSL as a collective or large segments of the group. These include strategic decisions about the management and functioning of the lab.
 
--   Non-critical decisions: These are decisions that will not impact GDSL as a collective or large segments of the group in any significant way. These include day-to-day decisions such as the cancelling or postponing of lab meetings, brown bag serminars and workshops.
+-   Non-critical decisions: These are decisions that will not impact GDSL as a collective or large segments of the group in any significant way. These include day-to-day decisions such as the cancelling or postponing of lab meetings, brown bag seminars and workshops.
 
 -   Time-sensitive decisions: These are decisions which require a rapid decision or action. These types of decisions can intersect with those above i.e. there could be critical time-sensitive decisions or non-critical time-sensitive decisions.
 
-All these decisions will be handled in different ways.
+The types of decisions identified above will be handled in specific ways as described below.
 
 ## Critical decisions
 
@@ -86,6 +88,8 @@ For critical decisions, the following procedure will be used:
 -   When sharing the meeting agenda, any critical decisions to be discussed during the meeting will be flagged.
 
 -   During the meeting, all GDSL members will have an opportunity to share their ideas and provide their perspectives.
+
+- GDSL members can also provide non-vocal input via Teams or email directed at the Lead or Deputy Lead. The deadline to receive this input will be at 5pm during the day that the meeting took place.
 
 -   The discussion will end when we identify and agree a list of potential and well-defined alternative decisions.
 
@@ -101,7 +105,7 @@ Voting may be conducted (1) at a staff meeting, (2) by email or (3) Teams channe
 4.  A super majority is defined as 67% or greater of the votes cast as affirmative, negative, and abstain.
 5.  Balloting done at meetings shall be extended to any non-attending members via email or Teams channel. If a GDSL member has a business-related conflict for a meeting, the member may submit their ballot by email or Teams.
 6.  A clear deadline will be given for the closing of the poll. In other words, there should be a minimum waiting period of 3 days after the announcement or discussion of a topic before the closing of the poll. Votes after the deadline will not be considered.
-7.  A minimum of fifteen GDSL members need to vote in order for the result to be valid. If a vote is considered as not valid, the voting period will be extended for an additional three days. By the end of this second round, a decision will be made considering the votes casted up to that point.
+7.  A minimum of 50% + 1 of GDSL members need to vote in order for the result to be valid. If a vote is considered as not valid, the voting period will be extended for an additional three days. By the end of this second round, a decision will be made considering the votes casted up to that point.
 8.  Proxy ballots are not allowed.
 9.  Normally a simple majority as defined in the previous section shall be needed to approve a motion. Per voice vote at a meeting, a super majority can be required to approve a motion.
 
@@ -113,20 +117,22 @@ Voting may be conducted (1) at a staff meeting, (2) by email or (3) Teams channe
 
 For non-critical decisions, the Lead and Deputy Lead will make a decision. If pertinent, they will consult with specific individuals.
 
-- In cases of differing views with a decision or action, issues can be raised with the Lead or Deputy Lead for an explanation, or if required, wider discussion at a Meeting. 
+-   In cases of differing views with a decision or action, issues can be raised with the Lead or Deputy Lead for an explanation, or if required, wider discussion at a Meeting.
 
 ## Time-sensitive decisions
 
 For time-sensitive decisions, the following procedure will apply:
 
-1.   If a decision must be made between six and 14 days:
--   The Lead and Deputy Lead will describe the options via Teams. 
+1.  If a decision must be made between six and 14 days:
+
+-   The Lead and Deputy Lead will describe the options via Teams.
 -   A vote will be open for 24hrs.
 -   Votes can be casted by email or Teams channel.
--   A decision will be made with the votes available at the time of closing. 
+-   A decision will be made with the votes available at the time of closing.
 -   Votes outside the 24hrs provided will not be counted.
 -   The same voting procedures around a majority vote and proxy ballots will applied.
 
-2.   If a decision must be made within 5 days or less:
--   The Lead and Deputy Lead will make a decision and will decide who to consult based on relevance, experience and expertise, with the best interest of the wider group at heart. 
--    No decisions will be made for personal advantage, or benefit a few within the community. 
+2.  If a decision must be made within 5 days or less:
+
+-   The Lead and Deputy Lead will make a decision and will decide who to consult based on relevance, experience and expertise, with the best interest of the wider group at heart.
+-   No decisions will be made for personal advantage, or benefit a few within the community.
